# ai_shared_data

./: .gitignore  README.md  pyproject.toml
ai_shared_data/: __init__.py  __main__.py  builders.py  fetch.py  models.py  paths.py  registry.py
ai_shared_data.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
